set(OPTIMIZE_ROOT_DIR ${CODE_ROOT_DIR}/src/optimize)

file(GLOB_RECURSE OPTIMIZE_TEST_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

add_executable(optimize_st
        test.cpp
        ${OPTIMIZE_TEST_FILES}
        ${CODE_ROOT_DIR}/common/autofuse_backend_spec_api.cpp
        ${CODE_ROOT_DIR}/tests/framework/easy_asc_graph/asc_graph_builder.cpp
)

if (ENABLE_ASAN)
    set(ASCGEN_SANITIZER_COMPILE_OPT
            -fsanitize=address -fsanitize=leak -fsanitize-recover=address)
    set(ASCGEN_SANITIZER_LINK_OPT
            -fsanitize=address -fsanitize=leak -fsanitize-recover=address)
else ()
    set(ASCGEN_SANITIZER_COMPILE_OPT "")
    set(ASCGEN_SANITIZER_LINK_OPT "")
endif ()

set(ASCGEN_DT_COMPILE_OPTION
        -O0
        -g
        --coverage -fprofile-arcs -ftest-coverage
        ${ASCGEN_SANITIZER_COMPILE_OPT}
)

set(ASCGEN_COMMON_LINK_OPTION
        ${ASCGEN_SANITIZER_LINK_OPT}
        -lrt -ldl -lgcov
)

target_include_directories(optimize_st PRIVATE
        ${CODE_ROOT_DIR}/../../..
        ${CODE_ROOT_DIR}/tests/framework/easy_asc_graph
        ${CODE_ROOT_DIR}/tests/depends/runtime/src
        ${ASCEND_INSTALL_PATH}/x86_64-linux/include/acl/error_codes
        ${CODE_ROOT_DIR}/tests/st/optimize
        ${CODE_ROOT_DIR}
)

target_compile_options(optimize_st PRIVATE ${ASCGEN_DT_COMPILE_OPTION}
        -Werror=format
        -Wno-deprecated-declarations
        -Wall -Wfloat-equal
        #        -Werror
        -Wno-subobject-linkage
)

target_link_libraries(optimize_st ${ASCGEN_COMMON_LINK_OPTION}
        -Wl,--no-as-needed
        atrace
        optimize
        ascir
        aihac_ir
        aihac_ir_register
        ascgen_common
        asc_slog_stub
        autofuse_runtime_stub
        error_manager
        graph_af
        metadef
        e2e
        GTest::gtest
)

add_test(NAME optimize_st COMMAND optimize_st --gtest_output=xml:${CMAKE_INSTALL_PREFIX}/report/st/optimize_st.xml)
set_tests_properties(optimize_st PROPERTIES LABELS "st;optimize_st")
